<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtCurrentVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="14dp"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_weight="1.8">
            <ImageView
                android:id="@+id/imgCurrentVehicle"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:src="@drawable/car_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="centerInside"
                app:layout_constraintTop_toBottomOf="@+id/txtCurrentVehicle" />
            <TextView
                android:id="@+id/txtChangeVehicle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="center"
                android:lineSpacingExtra="4sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue"
                android:padding="5dp"
                android:textSize="18dp"
                android:text="Сменить транспорт"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtCurrentMarkModelYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:textSize="16dp"
                android:text="@string/app_txt_vehicle"/>
            <TextView
                android:id="@+id/txtCurrentColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:textSize="16dp"
                android:text="@string/app_txt_color"/>
            <TextView
                android:id="@+id/txtCurrentOdometr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:textSize="16dp"
                android:text="@string/app_txt_odometr"/>
            <TextView
                android:id="@+id/txtCurrentEngine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:textSize="16dp"
                android:text="@string/app_txt_engine"/>
            <TextView
                android:id="@+id/txtCurrentBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:textSize="16dp"
                android:text="@string/app_txt_body"/>
            <TextView
                android:id="@+id/txtCurrentTank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:textSize="16dp"
                android:text="@string/app_txt_tank"/>
            <TextView
                android:id="@+id/txtCurrentMass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:textSize="16dp"
                android:text="@string/app_txt_mass"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageButton
            android:id="@+id/imgBtnOpenFuel"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@android:color/background_light"
            android:contentDescription="Кнопка fuel"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:layout_marginRight="2dp"
            app:srcCompat="@drawable/fuel" />
        <ImageButton
            android:id="@+id/imgBtnOpenOil"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@android:color/background_light"
            android:contentDescription="Кнопка fuel"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:layout_marginLeft="2dp"
            app:srcCompat="@drawable/oil" />
    </LinearLayout>


</LinearLayout>